@@ -1,6 +1,6 @@
 Package: crs
-Version: 0.15-26
-Date: 2017-05-02
+Version: 0.15-27
+Date: 2017-05-06
 Imports: boot, stats, np, quantreg, rgl
 Suggests: logspline, quadprog
 Title: Categorical Regression Splines
