@@ -1,0 +1,22 @@
+/* Copyright (C) 2000-2012 Simon N. Wood  simon.wood@r-project.org
+
+This program is free software; you can redistribute it and/or
+modify it under the terms of the GNU General Public License
+as published by the Free Software Foundation; either version 2
+of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+(www.gnu.org/copyleft/gpl.html)
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307,
+USA. */
+
+#include <Rinternals.h>
+#include <Rconfig.h>
+
+void mgcv_tmm(SEXP x,SEXP t,SEXP D,SEXP M, SEXP N);
